--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -18,8 +18,11 @@ body.welcomePageBody {
 
 body.indexBody {
     background-size: cover;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 60%, rgba(102, 102, 51, 0.4)) no-repeat fixed;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 60%, rgba(105, 105, 105, 0.4)) no-repeat fixed;
     height: 100%;
+}
+a {
+    color: #808080;
 }
 
 .welcomeButton {
