Delete feature started

--- a/src/main/resources/templates/AddNewSkunk.html
+++ b/src/main/resources/templates/AddNewSkunk.html
@@ -111,9 +111,12 @@
 
 <div th:insert="fragments/footer :: footer">...</div>
 
-<script th:src="@{webjars/jquery/3.4.1/jquery.min.js}" src="/webjars/jquery/3.4.1/jquery.min.js"></script>
-<script th:src="@{webjars/popper.js/1.15.0/umd/popper.min.js}" src="/webjars/popper.js/1.15.0/umd/popper.min.js"></script>
-<script th:src="@{webjars/bootstrap/4.4.1-1/js/bootstrap.js}" src="/webjars/bootstrap/4.4.1-1/js/bootstrap.js"></script>
+<!--<script th:src="@{webjars/jquery/3.4.1/jquery.min.js}" src="/webjars/jquery/3.4.1/jquery.min.js"></script>-->
+<!--<script th:src="@{webjars/popper.js/1.15.0/umd/popper.min.js}" src="/webjars/popper.js/1.15.0/umd/popper.min.js"></script>-->
+<!--<script th:src="@{webjars/bootstrap/4.4.1-1/js/bootstrap.js}" src="/webjars/bootstrap/4.4.1-1/js/bootstrap.js"></script>-->
+<script th:src="@{webjars/jquery/3.4.1/jquery.min.js}" ></script>
+<script th:src="@{webjars/popper.js/1.15.0/umd/popper.min.js}" ></script>
+<script th:src="@{webjars/bootstrap/4.4.1-1/js/bootstrap.js}" ></script>
 <script th:src="@{js/scripts.js}"></script>
 
 </body>
