--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,17 +98,25 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="indexPageModalTitle">Modal title</h5>
+                <h5 class="modal-title" id="indexPageModalTitle">Skunk</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body" id="indexPageModalBody">
-                <p></p>
+                <p class="text-center"></p>
                 <h5></h5>
+                <div>
+                    <div class="form-check form-check-inline checkboxes" >
+                        <input class="form-check-input" type="checkbox" name="checkboxes" id="checkbox1" value="option1" th:value="''">
+                        <label class="form-check-label" for="checkbox1" th:text="''">
+                            Default checkbox
+                        </label>
+                    </div>
+                </div>
                 <div class="text-center mt-4">
                     <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
-                    <a type="button" class="btn btn-dark ml-3" id="deleteSkunkModalBtn" href="#">Save changes</a>
+                    <a type="button" class="btn btn-dark ml-3" id="deleteSkunkModalBtn" href="#">Delete</a>
                 </div>
             </div>
         </div>
@@ -120,9 +128,5 @@
 <script th:src="@{webjars/popper.js/1.15.0/umd/popper.min.js}" ></script>
 <script th:src="@{webjars/bootstrap/4.4.1-1/js/bootstrap.js}" ></script>
 <script th:src="@{js/scripts.js}"></script>
-<script th:inline="javascript">
-    var datasources =/*[[${T(com.millysapp.enums.DatabaseEnum).values()}]]*/ 'enum';
-    console.log(datasources);
-</script>
 </body>
 </html>
